# IntershipINRIA

./: readme.md
ProjetsCpp/: readme.md
ProjetsCpp/lorenzCoord/: CMakeLists.txt  README.md
ProjetsCpp/lorenzCoord/src/: mecsyco_core_model_CppModelArtifact.cpp  mecsyco_core_model_CppModelArtifact.h
ProjetsCpp/lorenzZ/: CMakeLists.txt  README.md
ProjetsCpp/lorenzZ/src/: ModelArtifactLorenzZ.cpp
